# cora

./: .editorconfig  .gitattributes  .gitignore  CmakeLists.txt  Makefile
.github/ISSUE_TEMPLATE/: config.yml
include/: Cora.h
include/Cora/: Cora.h
include/Cora/AST/: ASTNode.hpp  Expressions.hpp  Statements.hpp
include/Cora/Basic/: SourceLocation.h  SourceManager.h
include/Cora/Parser/: Token.hpp
include/Cora/Runtime/: Value.hpp
lexer/: lexer.l
parser/: parser.y
src/: config.in
src/Compiler/AST/: ASTNode.cpp  Expressions.cpp  Statements.cpp
src/Compiler/Parser/: lexer.l  parser.y
src/Compiler/Runtime/: Value.cpp
src/ast/: ast.hpp  binoperations.cpp  binoperations.hpp  compoperations.cpp  compoperations.hpp  datatypes.cpp  datatypes.hpp  expression.cpp  expression.hpp  function.cpp  function.hpp  modoperations.cpp  modoperations.hpp  node.hpp  statement.cpp  statement.hpp  unaryoperations.cpp  unaryoperations.hpp  variable.cpp  variable.hpp
src/lexer/: CMakeLists.txt  lex.l  lexer copy.l  lexer.l  location.hpp  main.cpp  source.hpp  tokens.cpp  tokens.hpp
src/parser/: parser.y
tests/: testparser.py  verifylexer.py
